--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -1,134 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        *{
-            margin: 0;
-            padding: 0;
-        }
-        #header{
-            text-align: center;
-            margin: 50px 0 20px 0;
-        }
-        .gridContainer{
-            background-color: aquamarine;
-            width: fit-content;
-            margin-left: auto;
-            margin-right: auto;
-            display: grid;
-            grid-template-columns: auto auto auto;
-            gap: 10px;
-            padding: 10px;
-        }
-        .square{
-            background-color: pink;
-            font-size: 75px;
-            height: 100px;
-            width: 100px;
-            text-align: center;
-            line-height: 100px;
-            cursor: pointer;
-        }
-        .btn{
-            display: block;
-            margin: 10px auto;
-            width: 100px;
-            height: 30px;
-            cursor: pointer;
-        }
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      #header {
+        text-align: center;
+        margin: 50px 0 20px 0;
+        font-family: courier;
+      }
+      .gridContainer {
+        background-color: black;
+        width: fit-content;
+        margin: 50px auto;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        gap: 5px;
+      }
+      .square {
+        background-color: white;
+        font-size: 75px;
+        height: 100px;
+        width: 100px;
+        text-align: center;
+        line-height: 100px;
+        cursor: pointer;
+      }
+      .btn {
+        display: block;
+        margin: 10px auto;
+        width: 100px;
+        height: 30px;
+        cursor: pointer;
+        font-family: courier;
+        background-color: transparent;
+        border-style: none;
+      }
     </style>
-</head>
-<body onload="reset()">
+  </head>
+  <body onload="reset()">
     <h1 id="header"></h1>
     <div class="gridContainer">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
     </div>
-    <button class="btn" onclick="reset()">Reset</button>
+    <button class="btn" onclick="reset()"><h1>Reset</h1></button>
     <script>
-        function reset(){
-            let header = document.getElementById("header");
-            header.innerText="X's turn";
-            let isWinnerX = false;
-            let isWinnerO = false;
+      function reset() {
+        let header = document.getElementById("header")
+        header.innerText = "X's turn"
+        let isWinnerX = false
+        let isWinnerO = false
 
-            const winningCombinations = [
-                [0, 1, 2],
-                [3, 4, 5],
-                [6, 7, 8],
-                [0, 3, 6],
-                [1, 4, 7],
-                [2, 5, 8],
-                [0, 4, 8],
-                [2, 4, 6]
-            ];
+        const winningCombinations = [
+          [0, 1, 2],
+          [3, 4, 5],
+          [6, 7, 8],
+          [0, 3, 6],
+          [1, 4, 7],
+          [2, 5, 8],
+          [0, 4, 8],
+          [2, 4, 6],
+        ]
 
-            const squares = document.getElementsByClassName("square");
-            let counter=0;
-            const checkedArrayX=[];
-            const checkedArrayO=[];
-            
-            for(i=0; i<squares.length; i++){
-                squares[i].innerHTML="";
-                squares[i].id=i;
-                squares[i].addEventListener("click", function check(e) {
-                    if(counter < 9 && counter % 2 == 0){
-                        e.target.innerHTML="&#10006";
-                        checkedArrayX.push(Number(e.target.id));
-                        counter+=1;
-                        header.innerText="O's turn";
-                    } else {
-                        e.target.innerHTML="&#9711";
-                        checkedArrayO.push(Number(e.target.id));
-                        counter+=1;
-                        header.innerText="X's turn";
-                    }
-                    if(counter===9){
-                        header.innerText="No winner...";
-                    }
-                    checkWin();
-                    this.removeEventListener("click", check);
-                });
+        const squares = document.getElementsByClassName("square")
+        let counter = 0
+        const checkedArrayX = []
+        const checkedArrayO = []
+
+        for (i = 0; i < squares.length; i++) {
+          squares[i].innerHTML = ""
+          squares[i].id = i
+          squares[i].addEventListener("click", function check(e) {
+            if (counter < 9 && counter % 2 == 0) {
+              //   e.target.innerHTML = "&#10006"
+              e.target.innerHTML = "&#10005"
+              checkedArrayX.push(Number(e.target.id))
+              counter += 1
+              header.innerText = "O's turn"
+            } else {
+              e.target.innerHTML = "&#9711"
+              //   e.target.innerHTML = "&#9675"
+              checkedArrayO.push(Number(e.target.id))
+              counter += 1
+              header.innerText = "X's turn"
             }
-            function checkWin(){
-                for(i=0; i<8; i++){
-                    let counterX = 0;
-                    let counterO = 0;
-                    for(j=0; j<3; j++){
-                        if (checkedArrayX.includes(winningCombinations[i][j])){
-                            counterX+=1;
-                        } else if (checkedArrayO.includes(winningCombinations[i][j])){
-                            counterO+=1;
-                        }
-                    }
-                    if(counterX===3){
-                        if(isWinnerO){
-                            header.innerText="O won! Press the reset button to play another game." 
-                        } else {
-                            header.innerText="X wins!";
-                            isWinnerX=true;
-                        } 
-                    } else if (counterO===3){
-                        if(isWinnerX){
-                            header.innerText="X won! Press the reset button to play another game."
-                        }  else {
-                            header.innerText="O wins!";
-                            isWinnerO=true;
-                        }
-                    }
-                }
+            if (counter === 9) {
+              header.innerText = "No winner..."
             }
+            checkWin()
+            this.removeEventListener("click", check)
+          })
         }
+
+        function checkWin() {
+          for (i = 0; i < 8; i++) {
+            let counterX = 0
+            let counterO = 0
+            for (j = 0; j < 3; j++) {
+              if (checkedArrayX.includes(winningCombinations[i][j])) {
+                counterX += 1
+              } else if (checkedArrayO.includes(winningCombinations[i][j])) {
+                counterO += 1
+              }
+            }
+            if (counterX === 3) {
+              if (isWinnerO) {
+                header.innerText =
+                  "O won! Press the reset button to play another game."
+              } else {
+                header.innerText = "X wins!"
+                isWinnerX = true
+              }
+            } else if (counterO === 3) {
+              if (isWinnerX) {
+                header.innerText =
+                  "X won! Press the reset button to play another game."
+              } else {
+                header.innerText = "O wins!"
+                isWinnerO = true
+              }
+            }
+          }
+        }
+      }
     </script>
-</body>
+  </body>
 </html>
